# Z80Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.sh
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_connectShortcuts.cpp  mainwindow_newMenu.cpp  mainwindow_refreshCPU.cpp  registers.h  uimenu.h
mainwindow/menu/: uimenu.cpp  uimenu_p_addActions.cpp  uimenu_p_connectActions.cpp
mainwindow/menu/private_slots/: sl_file_openHex_p.cpp  sl_file_openSource_p.cpp  sl_file_saveSource_p.cpp
mainwindow/private_slots/: mw_sl_bt_asm_pressed.cpp  mw_sl_bt_step_pressed.cpp  mw_sl_loadHex.cpp  mw_sl_loadSrc.cpp  mw_sl_saveSrc.cpp
mainwindow/registers/: registers.cpp  rgs_connectSlots.cpp  rgs_refresh.cpp
mainwindow/registers/private_slots/: rgs_sl_A_ch.cpp  rgs_sl_B_ch.cpp  rgs_sl_C_ch.cpp  rgs_sl_D_ch.cpp  rgs_sl_E_ch.cpp  rgs_sl_H_ch.cpp  rgs_sl_L_ch.cpp  rgs_sl_PC_ch.cpp  rgs_sl_SP_ch.cpp
